tests/parser/should_compile/T15781.hs
{-# LANGUAGE KindSignatures #-}
module T15781 where

import Data.Kind

type F = Int :: Type
