tests/parser/should_fail/T17045.hs
{-# LANGUAGE PackageImports #-}

module Bug where

import "base" Prelude (zip)

wobbly :: String
wobbly = "hello"
